# chip8

./: Cargo.toml  rustfmt.toml
src/: arguments.rs  color.rs  draw.rs  emulator.rs  main.rs  ui.rs
src/arguments/: compatability_mode.rs  scale.rs
src/emulator/: instruction.rs
