[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
expect_used = "warn"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.80"
minifb = "0.25"
