[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
expect_used = "warn"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.80"
bitvec = "1.0.1"
clap = { version = "4.5.1", features = ["derive"] }
hex_color = "3.0.0"
minifb = "0.25"
